[package]
name = "station"
description = "A network-based interprocess communication (IPC) library."
documentation = "https://docs.rs/station"
repository = "https://github.com/domagalski/station-rs"
homepage = "https://github.com/domagalski/station-rs"
keywords = ["station", "ipc", "pubsub", "rpc",  "network"]
categories = ["command-line-utilities", "network-programming"]
readme = "README.md"
license = "MIT"
version = "0.0.1"
authors = ["Rachel Domagalski"]
edition = "2018"

[dependencies]
bincode = "1.3"
byteorder = "1"
lazy_static = "1.4"
log = "0.4"
parking_lot = "0.11"
pretty_env_logger = "0.4.0"
regex = "1"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
env_logger = "0.8"
portpicker = "0.1"
tempfile = "3"
test-env-log = "0.2"
