[package]
name = "station"
description = "A network-based interprocess communication (IPC) library."
documentation = "https://docs.rs/station"
repository = "https://github.com/domagalski/station-rs"
homepage = "https://github.com/domagalski/station-rs"
keywords = ["station", "ipc", "pubsub", "rpc",  "network"]
categories = ["command-line-utilities", "network-programming"]
readme = "README.md"
license = "MIT"
version = "0.1.4"
authors = ["Rachel Domagalski"]
edition = "2021"

[dependencies]
bincode = "1.3"
byteorder = "1"
dirs = "4.0"
lazy_static = "1.4"
log = "0.4"
mio = { version = "0.8", features = ["os-poll", "net"] }
parking_lot = "0.11"
pretty_env_logger = "0.4.0"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"

[dev-dependencies]
env_logger = "0.8"
portpicker = "0.1"
tempfile = "3"
